src/snapshots/turnip_calc__tests__missing_prices.snap
---
source: src/tests.rs
assertion_line: 187
expression: results

---
[
    (
        SmallSpike,
        0.8462164361269328,
    ),
    (
        Random,
        0.1537835638730672,
    ),
]
