src/snapshots/turnip_calc__tests__random_partial.snap
---
source: src/tests.rs
assertion_line: 51
expression: results

---
[
    (
        Random,
        0.888888888888889,
    ),
    (
        SmallSpike,
        0.11111111111111112,
    ),
]
